--- a/src/assets/styles/autosuggestion.scss
+++ b/src/assets/styles/autosuggestion.scss
@@ -1,9 +1,11 @@
+@import 'variables';
+
 .react-autosuggest__container {
   position: relative;
 }
 
 .react-autosuggest__input {
-  border: 1px solid #aaa;
+  border: 1px solid $medium-gray-2;
   border-radius: 4px;
   font-family: Helvetica, sans-serif;
   font-size: 16px;
@@ -27,8 +29,8 @@
 }
 
 .react-autosuggest__container--open .react-autosuggest__suggestions-container {
-  background-color: #fff;
-  border: 1px solid #aaa;
+  background-color: $white;
+  border: 1px solid $medium-gray-2;
   border-bottom-left-radius: 4px;
   border-bottom-right-radius: 4px;
   display: block;
@@ -53,12 +55,12 @@
 }
 
 .react-autosuggest__suggestion:not(:first-child) {
-  border-top: 1px solid #ddd;
+  border-top: 1px solid $gray-light-3;
 }
 
 .react-autosuggest__suggestion--focused {
-  background-color: #0c7eaf;
-  color: #fff;
+  background-color: $strong-blue-1;
+  color: $white;
 }
 
 .suggestion-content {
@@ -93,5 +95,5 @@
 }
 
 .react-autosuggest__suggestion--focused .highlight {
-  color: #120000;
+  color: $black;
 }
