--- a/src/assets/styles/_contacts.scss
+++ b/src/assets/styles/_contacts.scss
@@ -8,6 +8,13 @@
 	width: 100%;
 }
 
+.link-and-nums-contacts{
+	color: $gray-dark-1;
+	&:hover{
+		color: $light-blue;
+	}
+}
+
 .title-part-contact {
 	color: $light-blue;
 }
@@ -37,9 +44,9 @@
 	background: $light-gray-3;
 	display: flex;
 	flex-direction: column;
-	height: 53px;
 	justify-content: center;
 	margin: auto;
+	min-height: 53px;
 	text-align: center;
 	width: 53px;
 }
