--- a/src/assets/styles/_vacancy.scss
+++ b/src/assets/styles/_vacancy.scss
@@ -27,6 +27,13 @@
         }
       }
 
+      .noimg-vacancy {
+        text-align: center;
+        img {
+          width: 83%;
+        }
+      }
+
       .conditions {
         -moz-border-radius: 3px;
         -webkit-border-radius: 3px;
