--- a/src/assets/styles/_clients-say.scss
+++ b/src/assets/styles/_clients-say.scss
@@ -75,6 +75,21 @@
 	width: 75px;
 }
 
+.mu-rt-img-noimg {
+	background-color: $pure-blue;
+	border: 4px solid $gray-light-1;
+	border-radius: 50%;
+	display: inline-block;
+	height: 75px;
+	margin-bottom: 25px;
+	width: 75px;
+	i {
+		color: $white;
+		font-size: 30px;
+		margin: 20px;
+	}
+}
+
 .mu-rt-name {
 	color: $white;
 	letter-spacing: 1px;
