fix show specialities

--- a/src/assets/styles/_clients-say.scss
+++ b/src/assets/styles/_clients-say.scss
@@ -75,7 +75,7 @@
 	width: 75px;
 }
 
-.mu-rt-img-noimg {
+.mu-rt-noimg {
 	background-color: $pure-blue;
 	border: 4px solid $gray-light-1;
 	border-radius: 50%;
