--- a/src/assets/styles/_vacancies.scss
+++ b/src/assets/styles/_vacancies.scss
@@ -49,7 +49,7 @@ a {
 		input {
 			border: 0;
 			border-radius: 2px;
-      padding: 4px;
+      padding: 4px 4px 4px 10px;
       width: 98%;
 		}
 		.block-search-vacancy {
@@ -305,7 +305,8 @@ a {
       padding: 7px 15px 10px;
       &.vacancy-hot {
 				box-shadow: 0 2px 10px 0 $rgb-02;
-				cursor: pointer;
+        cursor: pointer;
+        background-color: $yellowish-white;
       }
 			.title-vacancy {
 				color: $strong-blue-2;
