--- a/src/assets/styles/_vacancies.scss
+++ b/src/assets/styles/_vacancies.scss
@@ -174,6 +174,32 @@ a {
 						}
 					}
 				}
+      }
+      
+      .filter-block {
+				margin-top: 30px;
+				.filter {
+					background-color: $white;
+					border-radius: 3px;
+					padding: 20px 25px;
+					.filter-list {
+						li {
+							line-height: 19px;
+							list-style: none;
+							margin: -1px auto 0;
+							label {
+								border-bottom: 1px solid $solitude;
+								cursor: pointer;
+								margin: 0;
+								padding: 10px 24px 10px 0;
+								width: 100%;
+								span {
+									margin-left: 15px;
+								}
+							}
+						}
+					}
+				}
 			}
 			.filter-age-block {
 				margin-top: 30px;
