--- a/src/assets/styles/_helpers.scss
+++ b/src/assets/styles/_helpers.scss
@@ -1,4 +1,4 @@
-@each $size in (0, 1, 2, 3, 10, 15, 17, 20, 25, 30, 40, 50, 100, 120) {
+@each $size in (0, 1, 2, 3, 10, 15, 17, 20, 25, 30, 40, 50, 80, 100, 120) {
   @each $prop in (t: top, b: bottom, l: left, r: right) {
     .m#{nth($prop, 1)}-#{$size} {
       margin-#{nth($prop, 2)}: #{$size}px ;
@@ -16,6 +16,10 @@
   .w-#{$size} {
     width: #{$size}px ;
   }
+}
+
+.opacity-07 {
+  opacity: 0.7;
 }
 
 .fs-07r {
