fix sorting in BasicInfo

--- a/src/assets/styles/_vacancies.scss
+++ b/src/assets/styles/_vacancies.scss
@@ -323,6 +323,13 @@ a {
 				font-size: 18px;
 				margin-left: 10px;
 			}
+			.sort-block {
+				margin: 15px 0;
+				.css-10nd86i {
+					display: inline-block;
+    				width: 23%;
+				}
+			}
 		}
 		.mu-vacancy {
 			background-color: $white;
