--- a/src/assets/styles/_vacancies.scss
+++ b/src/assets/styles/_vacancies.scss
@@ -97,7 +97,32 @@ a {
       p {
         color: $black;
         font-size: 22px;
-      }
+	  }
+	  .filter-block {
+		  ul {
+			  div {
+          margin-top: 15px;
+          li {
+            align-items: center;
+            display: flex;
+            justify-content: space-between;
+            .fa-times-circle {
+              &:hover {
+                cursor: pointer;
+              }
+            }
+          }
+			  }
+		  }
+		  .reset-filters {
+			  display: flex;
+			  justify-content: flex-end;
+			  &:hover {
+				  color: $pure-blue;
+				  cursor: pointer;
+			  }
+		  }
+	  }
 			.block-salary {
         background-color: $white;
 				border-radius: 3px;
@@ -175,7 +200,7 @@ a {
 					}
 				}
       }
-      
+
       .filter-block {
 				margin-top: 30px;
 				.filter {
