--- a/src/assets/styles/_variables.scss
+++ b/src/assets/styles/_variables.scss
@@ -48,5 +48,6 @@ $strong-red: #b94a48;
 $very-light-gray: #ebebeb;
 $medium-gray-3: #959595;
 $solitude: #e5e6e9;
-//fonts
+$nero: #212121;
+$curious-blue: #3e86b1;
 $font-dancing: 'Pacifico';
