--- a/src/assets/styles/_vacancies.scss
+++ b/src/assets/styles/_vacancies.scss
@@ -58,6 +58,16 @@ a {
 
     .block-search-vacancy {
       position: absolute;
+      .close-vacancy {
+        color: $black;
+        display: inline-block;
+        position: absolute;
+        right: 35px;
+        top: 2px;
+        &:hover {
+          cursor: pointer;
+        }
+      }
       #react-autowhatever-auto-compleat {
         background-color: $strong-blue-1;
         max-height: 250px;
@@ -472,13 +482,14 @@ a {
 
       .block-share {
         .SocialMediaShareButton {
-					&:hover {
-						cursor: pointer;
-					}
-					&:focus {
-						outline: none;
-					}
-				}
+          &:hover {
+            cursor: pointer;
+          }
+
+          &:focus {
+            outline: none;
+          }
+        }
       }
     }
   }
