--- a/src/assets/styles/_call-back.scss
+++ b/src/assets/styles/_call-back.scss
@@ -1,55 +1,54 @@
 #mu-call-to-action {
-	border-radius: 5px;
-	//margin: 120px 0;
-  box-shadow: 0 0 14px #e0dbdb;
+  border-radius: 5px;
+  box-shadow: 0 0 14px $light-reddish-gray;
   float: left;
-	position: relative;
-	width: 100%;
+  position: relative;
+  width: 100%;
 }
 
 #mu-call-to-action:before {
-	bottom: 0;
-	content: '';
-	left: 0;
-	position: absolute;
-	right: 0;
-	top: 0;
+  bottom: 0;
+  content: '';
+  left: 0;
+  position: absolute;
+  right: 0;
+  top: 0;
 }
 
 .mu-call-to-action-area {
-	display: inline;
-	float: left;
-	padding: 30px 0;
+  display: inline;
+  float: left;
+  padding: 30px 0;
   text-align: center;
   width: 100%;
 }
 
 .mu-call-to-action-left {
-	display: inline;
-	max-width: 70%;
+  display: inline;
+  max-width: 70%;
 }
 
 .mu-call-to-action-left h2 {
-	font-size: 24px;
-	margin-bottom: 5px;
-	text-transform: uppercase;
+  font-size: 24px;
+  margin-bottom: 5px;
+  text-transform: uppercase;
 }
 
 .mu-call-to-action-left p {
-	margin-bottom: 0;
+  margin-bottom: 0;
 }
 
 .mu-quote-btn {
   margin: 20px 0 0 0;
   padding: 10px 40px;
   i {
-      &::before {
-          padding: 0 0 0 10px;
-      }
+    &::before {
+      padding: 0 0 0 10px;
+    }
   }
 }
 
 .mu-quote-btn:hover,
 .mu-quote-btn:focus {
-	color: $white;
+  color: $white;
 }
