--- a/src/assets/styles/_vacancies.scss
+++ b/src/assets/styles/_vacancies.scss
@@ -18,7 +18,7 @@ a {
   .hot-img {
     background-image: url('../images/hot-img.png');
     background-repeat: no-repeat;
-    height: 100px;
+    height: 55px;
     position: absolute;
     right: -85px;
     width: 100px;
@@ -116,6 +116,13 @@ a {
         font-size: 22px;
       }
 
+      .filter {
+        background-color: $white;
+        border-radius: 3px;
+        box-shadow: 4px 5px 25px -6px $black;
+        padding: 20px 25px;
+      }
+
       .filter-block {
         ul {
           div {
@@ -141,13 +148,27 @@ a {
             cursor: pointer;
           }
         }
+
+        .filter-list {
+          li {
+            line-height: 19px;
+            list-style: none;
+            margin: -1px auto 0;
+            label {
+              border-bottom: 1px solid $solitude;
+              cursor: pointer;
+              margin: 0;
+              padding: 10px 24px 10px 0;
+              width: 100%;
+              span {
+                margin-left: 15px;
+              }
+            }
+          }
+        }
       }
 
       .block-salary {
-        background-color: $white;
-        border-radius: 3px;
-        box-shadow: 0 2px 1px 0 $gray-light-3;
-        padding: 20px 25px;
         input {
           -moz-box-shadow: inset 0 1px 0 $gray-light-1;
           -webkit-box-shadow: inset 0 1px 0 $gray-light-1;
@@ -173,144 +194,84 @@ a {
         }
       }
 
-      .filter-experience-block {
-        margin-top: 30px;
-        .filter-experience {
-          background-color: $white;
-          border-radius: 3px;
-          padding: 20px 25px;
-          input {
-            border: 0;
-            padding: 0 4px;
-            width: 30px;
-          }
-          .input-range__label {
-            display: none;
-          }
-          .input-range__track--active {
-            background: $pure-blue;
-          }
-          .input-range__slider {
-            background: $pure-blue;
-            border: 1px solid $white;
-          }
+      .filter-experience {
+        input {
+          border: 0;
+          padding: 0 4px;
+          width: 30px;
+        }
+        .input-range__label {
+          display: none;
+        }
+        .input-range__track--active {
+          background: $pure-blue;
+        }
+        .input-range__slider {
+          background: $pure-blue;
+          border: 1px solid $white;
         }
       }
 
-      .filter-sex-block {
-        margin-top: 30px;
-        .filter-sex {
-          background-color: $white;
-          border-radius: 3px;
-          padding: 20px 25px;
-          .filter-list {
-            li {
-              line-height: 19px;
-              list-style: none;
-              margin: -1px auto 0;
-              label {
-                border-bottom: 1px solid $solitude;
-                cursor: pointer;
-                margin: 0;
-                padding: 10px 24px 10px 0;
-                width: 100%;
-                span {
-                  margin-left: 15px;
-                }
+      .filter-sex {
+        .filter-list {
+          li {
+            line-height: 19px;
+            list-style: none;
+            margin: -1px auto 0;
+            label {
+              border-bottom: 1px solid $solitude;
+              cursor: pointer;
+              margin: 0;
+              padding: 10px 24px 10px 0;
+              width: 100%;
+              span {
+                margin-left: 15px;
               }
             }
           }
         }
       }
 
-      .filter-block {
-        margin-top: 30px;
-        .filter {
-          background-color: $white;
+      .filter-age {
+        input {
+          -moz-box-shadow: inset 0 1px 0 $gray-light-1;
+          -webkit-box-shadow: inset 0 1px 0 $gray-light-1;
+          background-color: $gray-light-1;
+          border: 1px solid $gray-light-3;
           border-radius: 3px;
-          padding: 20px 25px;
-          .filter-list {
-            li {
-              line-height: 19px;
-              list-style: none;
-              margin: -1px auto 0;
-              label {
-                border-bottom: 1px solid $solitude;
-                cursor: pointer;
-                margin: 0;
-                padding: 10px 24px 10px 0;
-                width: 100%;
-                span {
-                  margin-left: 15px;
-                }
-              }
-            }
-          }
+          box-shadow: inset 0 1px 0 $gray-light-1;
+          font-size: 13px;
+          height: 30px;
+          line-height: 30px;
+          padding: 0 10px;
+          width: 100%;
+        }
+        .input-range__label {
+          display: none;
+        }
+        .input-range__track--active {
+          background: $pure-blue;
+        }
+        .input-range__slider {
+          background: $pure-blue;
+          border: 1px solid $white;
         }
       }
 
-      .filter-age-block {
-        margin-top: 30px;
-        .filter-age {
-          background-color: $white;
-          border-radius: 3px;
-          box-shadow: 0 2px 1px 0 $gray-light-3;
-          padding: 20px 25px;
-          input {
-            -moz-box-shadow: inset 0 1px 0 $gray-light-1;
-            -webkit-box-shadow: inset 0 1px 0 $gray-light-1;
-            background-color: $gray-light-1;
-            border: 1px solid $gray-light-3;
-            border-radius: 3px;
-            box-shadow: inset 0 1px 0 $gray-light-1;
-            font-size: 13px;
-            height: 30px;
-            line-height: 30px;
-            padding: 0 10px;
-            width: 100%;
-          }
-          .input-range__label {
-            display: none;
-          }
-          .input-range__track--active {
-            background: $pure-blue;
-          }
-          .input-range__slider {
-            background: $pure-blue;
-            border: 1px solid $white;
-          }
-        }
-      }
-
-      .filter-country-block {
-        margin-top: 30px;
-        .filter-country {
-          background-color: $white;
-          border-radius: 3px;
-          padding: 20px 25px;
-        }
-      }
-
-      .filter-service-block {
-        margin-top: 30px;
-        .filter-service {
-          background-color: $white;
-          border-radius: 3px;
-          padding: 20px 25px;
-          .filter-list {
-            li {
-              line-height: 19px;
-              list-style: none;
-              margin: -1px auto 0;
-              label {
-                border-bottom: 1px solid $solitude;
-                cursor: pointer;
-                margin: 0;
-                padding: 10px 24px 10px 0;
-                width: 100%;
-                span {
-                  margin-left: 15px;
-                }
+      .filter-service {
+        .filter-list {
+          li {
+            line-height: 19px;
+            list-style: none;
+            margin: -1px auto 0;
+            label {
+              border-bottom: 1px solid $solitude;
+              cursor: pointer;
+              margin: 0;
+              padding: 10px 24px 10px 0;
+              width: 100%;
+              span {
+                margin-left: 15px;
               }
             }
           }
@@ -364,6 +325,8 @@ a {
 
     .how-vacancies {
       background-color: $white;
+      border-radius: 3px;
+      box-shadow: 0 2px 25px -6px $black;
       padding: 2px 25px;
       .city-work {
         color: $gray-dark-4;
@@ -394,14 +357,8 @@ a {
     .mu-vacancy {
       background-color: $white;
       border-radius: 3px;
-      box-shadow: 0 2px 1px 0;
+      box-shadow: 4px 5px 25px -6px $black;
       padding: 7px 15px 10px;
-      &.vacancy-hot {
-        background-color: $yellowish-white;
-        box-shadow: 0 2px 10px 0 $rgb-02;
-        cursor: pointer;
-      }
-
       .title-vacancy {
         color: $strong-blue-2;
         font-size: 25px;
@@ -476,7 +433,6 @@ a {
 
       &:hover {
         background-color: $yellowish-white;
-        box-shadow: 0 2px 10px 0 $rgb-02;
         cursor: pointer;
       }
 
