add scss files to roots

--- a/src/assets/styles/_slick.scss
+++ b/src/assets/styles/_slick.scss
@@ -1,3 +1,5 @@
+@import 'variables';
+
 .slick-slider
 {
     -moz-user-select: none;
@@ -305,4 +307,3 @@
     color: $black;
     opacity: .75;
 }
-
