add service page

--- a/src/assets/styles/style.scss
+++ b/src/assets/styles/style.scss
@@ -15,6 +15,7 @@
 @import 'call-back';
 @import 'vacancy';
 @import 'services';
+@import 'service';
 @import 'pricing';
 @import 'media';
 @import 'about-us';
