--- a/src/assets/styles/service.scss
+++ b/src/assets/styles/service.scss
@@ -16,7 +16,8 @@
 
     img {
       float: left;
-      margin: 10px 35px 0 0;
+      margin: 0 5px 0 0;
+      padding: 7px;
       width: 50%;
     }
 
@@ -25,7 +26,7 @@
       background-color: $pure-blue;
       display: flex;
       justify-content: space-evenly;
-      margin-top: 10px;
+      margin-top: 25px;
       span {
         color: $white;
         font-size: 23px;
@@ -54,7 +55,7 @@
     }
 
     .about-service {
-      font-size: 20px;
+      font-size: 19px;
     }
   }
 }
