--- a/src/assets/styles/_clients-say.scss
+++ b/src/assets/styles/_clients-say.scss
@@ -1,6 +1,6 @@
 .mu-testimonials {
 	background-attachment: fixed;
-	background-image: url("../images/img_feedback.jpg");
+	background-image: url("../images/home/header_slider/3.jpg");
 	background-position: center center;
 	background-size: cover;
 	display: inline;
