--- a/src/assets/styles/service.scss
+++ b/src/assets/styles/service.scss
@@ -18,7 +18,7 @@
       float: left;
       margin: 0 5px 0 0;
       padding: 7px;
-      width: 50%;
+      width: 44%;
     }
 
     .payload-service {
@@ -55,7 +55,8 @@
     }
 
     .about-service {
-      font-size: 19px;
+      font-size: 15px;
+      white-space: pre-line;
     }
   }
 }
