--- a/src/assets/styles/_helpers.scss
+++ b/src/assets/styles/_helpers.scss
@@ -63,6 +63,10 @@
   color: $white;
 }
 
+.c-green {
+  color: #83bf97;
+}
+
 .bgc-strong-blue-2 {
   background-color: $strong-blue-2;
 }
@@ -77,6 +81,10 @@
 
 .w-100 {
   width: 100%;
+}
+
+.w-18px {
+  width: 18px;
 }
 
 @font-face {
