fix color icons

--- a/src/assets/styles/_variables.scss
+++ b/src/assets/styles/_variables.scss
@@ -51,3 +51,5 @@ $solitude: #e5e6e9;
 $nero: #212121;
 $curious-blue: #3e86b1;
 $font-dancing: 'Pacifico';
+$whatsapp-color: #83bf97;
+$telegram-color: #00a7d7;
