--- a/src/assets/styles/_helpers.scss
+++ b/src/assets/styles/_helpers.scss
@@ -63,8 +63,12 @@
   color: $white;
 }
 
-.c-green {
-  color: #83bf97;
+.c-whatsapp {
+  color: $whatsapp-color;
+}
+
+.c-telegram {
+  color: $telegram-color;
 }
 
 .bgc-strong-blue-2 {
